[gd_scene load_steps=7 format=2]

[ext_resource path="res://special_scenes/options_menu/GameOptions.tscn" type="PackedScene" id=1]
[ext_resource path="res://special_scenes/pause_menu/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://special_scenes/options_menu/AudioOptions.tscn" type="PackedScene" id=3]
[ext_resource path="res://special_scenes/options_menu/OptionsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://special_scenes/MenuManager.gd" type="Script" id=5]
[ext_resource path="res://special_scenes/options_menu/GraphicsOptions.tscn" type="PackedScene" id=6]

[node name="MainGame" type="Node"]

[node name="Menu" type="Node" parent="."]
script = ExtResource( 5 )

[node name="PauseMenu" parent="Menu" instance=ExtResource( 2 )]

[node name="OptionsMenu" parent="Menu" instance=ExtResource( 4 )]

[node name="AudioOptions" parent="Menu" instance=ExtResource( 3 )]

[node name="GraphicsOptions" parent="Menu" instance=ExtResource( 6 )]

[node name="GameOptions" parent="Menu" instance=ExtResource( 1 )]

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -7.0
margin_right = 120.0
margin_bottom = 7.0
grow_horizontal = 2
text = "Premi ESC per aprire il menu di pausa"
__meta__ = {
"_edit_use_anchors_": false
}
